--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetalhesDaFeiraActivity"></activity>
+        <activity android:name=".DetalhesDoProdutoActivity"></activity>
+        <activity android:name=".DetalhesDaFeiraActivity" />
         <activity android:name=".ListaProdutoresActivity" />
         <activity android:name=".ListaProdutosActivity" />
         <activity android:name=".ListaFeirasActivity" />
