--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetalhesDoProdutorActivity"></activity>
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".task.LoginActivity" />
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:label="@string/title_activity_login" />
+        <activity android:name=".DetalhesComprasReservas" />
+        <activity android:name=".ListaReservasActivity" />
+        <activity android:name=".DetalhesDoProdutorActivity" />
         <activity android:name=".DetalhesDoProdutoActivity" />
         <activity android:name=".DetalhesDaFeiraActivity" />
         <activity android:name=".ListaProdutoresActivity" />
         <activity android:name=".ListaProdutosActivity" />
         <activity android:name=".ListaFeirasActivity" />
+        <activity android:name=".InserirNovaReservaActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
